Add --add-modules option to runner in project-manager